--- a/admin/books-list/books-list.component.html
+++ b/admin/books-list/books-list.component.html
@@ -26,60 +26,49 @@
       Add Books Automatically!
     </button>
 
-    <ng-template #myDialog1>
+    <ng-template #myDialog1 class="dialogue">
       <h2 matDialogTitle>ADD Books Automatically!</h2>
       <mat-dialog-content>
         <div class="background">
           <div class="col-md-6">
-            <!-- <div
-                class="mb-4 d-flex justify-content-between align-items-center"
+            <form [formGroup]="automaticBook">
+              <input
+                type="text"
+                matInput
+                formControlName="search"
+                (input)="search()"
+                [matAutocomplete]="auto"
+              />
+              <mat-autocomplete
+                #auto="matAutocomplete"
+                [displayWith]="displayFn"
               >
-                <div class="position-relative">
-                  <form [formGroup]="form">
-                    <mat-form-field class="example-full-width" appearance="fill">
-                      <mat-label>Search</mat-label>
-                      <input
-                        type="text"
-                        matInput
-                        formControlName="search"
-                        (input)="filter()"
-                        [matAutocomplete]="auto"
-                      />
-                      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                        <mat-option *ngFor="let option of allData" [value]="option">
-                          <div (click)="display(option)">
-                            {{ option.volumeInfo.title }}
-                          </div>
-                        </mat-option>
-                      </mat-autocomplete>
-                    </mat-form-field>
-
-                    <hr />
-                  </form>
-                  <div *ngFor="let data of displayData">
-                    <h1>{{ data.volumeInfo.title }}</h1>
-                    <h2>{{ data.volumeInfo.authors[0] }}</h2>
-                    <p>{{ data.volumeInfo.description }}</p>
-                    <img src="{{ data.volumeInfo.imageLinks.thumbnail }}" />
+                <mat-option *ngFor="let option of searchData" [value]="option">
+                  <div (click)="display(option)">
+                    {{ option.volumeInfo.title }}
                   </div>
-                </div>
-              </div> -->
-
-
-              
+                </mat-option>
+              </mat-autocomplete>
+            </form>
+            <hr />
+            <div>
+              <h1>{{ displayData.volumeInfo.title }}</h1>
+              <h2>{{ displayData.volumeInfo.authors[0] }}</h2>
+              <p>{{ displayData.volumeInfo.description }}</p>
+              <img src="{{ displayData.volumeInfo.imageLinks.thumbnail }}" />
+            </div>
+            <div *ngIf="displayData.volumeInfo.title">
+              <button mat-button class="addButton"  (click)="addBook()">
+                Add
+              </button>
+            </div>
           </div>
         </div>
       </mat-dialog-content>
     </ng-template>
-    <button
-      mat-button
-      color="light"
-      (click)="openDialogWithTemplateRef(myDialog)"
-    >
-      Add Books Manually!
-    </button>
+
   </div>
-  <ng-template #myDialog>
+  <!-- <ng-template #myDialog>
     <h2 matDialogTitle>ADD Books Manually!</h2>
     <mat-dialog-content>
       <div class="background">
@@ -126,7 +115,7 @@
         </div>
       </div>
     </mat-dialog-content>
-  </ng-template>
+  </ng-template> -->
   <div class="scss">
     <div class="table-wrapper-scroll-y my-custom-scrollbar">
       <table class="table table-bordered table-striped mb-0">
@@ -137,7 +126,7 @@
             <th scope="col" width="21.1%">Author</th>
 
             <th scope="col" width="21.1%">
-              <span>Edit</span>
+              <span>Delete</span>
             </th>
           </tr>
         </thead>
@@ -152,14 +141,7 @@
             <td>{{ item.Name }}</td>
 
             <td class=" ">
-              <button
-                mat-raised-button
-                type="button"
-                class="btn btn-primary mr-1"
-                (click)="goToEdit(item)"
-              >
-                EDIT
-              </button>
+           
 
               <button
                 mat-raised-button
