--- a/admin/books-list/books-list.component.scss
+++ b/admin/books-list/books-list.component.scss
@@ -34,3 +34,14 @@
     height: 70vh;
     overflow: auto;
     }
+
+    .dialogue{
+        height: 1000px;
+        width: 1500px
+    }
+
+.addButton{
+    margin: 20px;
+    background-color: green;
+    color: white;
+}
