--- a/admin/message/message.component.html
+++ b/admin/message/message.component.html
@@ -1,4 +1,13 @@
-
-  <div class="container mt-2 ">
-    <button mat-button mat-dialog-close style="color:red">Close</button>
+ <!-- this message component is responsible for the admin navbar -->
+ <div class="position">
+  <div class="w3-bar w3-theme-d2">
+    <a
+      class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2"
+      href="javascript:void(0);"
+      ><i class="fa fa-bars"></i
+    ></a>
+    <a class="w3-bar-item w3-button w3-padding-large w3-theme-d4"
+      ><i class="fa fa-home w3-margin-right"></i>Admin Page</a
+    >
   </div>
+</div> 
