--- a/admin/books/dialog/dialog.component.html
+++ b/admin/books/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<!-- <div mat-dialog-content>
   <h1 style="color: green">Books List!</h1>
   <ul>
     <div *ngFor="let book of books">
@@ -12,4 +12,4 @@
   </ul>
 
   <button mat-button mat-dialog-close style="color: green">Close</button>
-</div>
+</div> -->
