--- a/homepage/homepage-books/homepage-books.component.scss
+++ b/homepage/homepage-books/homepage-books.component.scss
@@ -14,3 +14,16 @@
 #page-content {
   flex: 1 0 auto;
 }
+.card{
+    margin: 10px;
+    height: 280px;
+    width: 170px;
+}
+.imageContainer{
+    display: flex;
+    flex-wrap: wrap;
+}
+.img{
+    height: 250px;
+    width: 150px;
+}
