--- a/student/student.component.scss
+++ b/student/student.component.scss
@@ -9,7 +9,7 @@
 
 .my-custom-scrollbar {
     position: relative;
-    height: 74.5vh;
+    height: 24vh;
     overflow: auto;
     }
     .table-wrapper-scroll-y {
@@ -18,3 +18,42 @@
     #page-content {
         flex: 1 0 auto;
       }
+      .card{
+        margin: 10px;
+        height: 280px;
+        width: 170px;
+    }
+    .my-custom-scroll {
+        position: relative;
+        height: 85.5vh;
+        overflow: auto;
+        }
+        .table-wrapper-scroll {
+        display: block;
+        }
+        #page-content {
+            flex: 1 0 auto;
+          }
+          .card{
+            margin: 10px;
+            height: 280px;
+            width: 170px;
+        }
+ 
+    
+.buttons{
+    display: flex;
+    justify-content: center;
+
+}
+
+.yesButton{
+    margin: 10px;
+    background-color: green;
+    color: white;
+}
+.noButton{
+    margin: 10px;
+    background-color: red;
+    color: white;
+}
