--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,76 +1,39 @@
+<mat-form-field class="search">
+  <mat-label>Filter</mat-label>
+  <input matInput placeholder="Ex. id" #input />
+</mat-form-field>
+<div class="sidePannel2">
+  <div class="table-wrapper-scroll-y my-custom-scrollbar">
+    <table class="table table-striped mb-0" mat-table [dataSource]="dataSource">
+      <div class="mat-elevation-z8">
+        <!-- RegistrationId Column -->
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Book title</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.BookName }}
+          </td>
+        </ng-container>
 
-    <mat-form-field class="search">
-      <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ex. id"
-        #input
-      />
-    </mat-form-field>
-    <div class="sidePannel2">
-      <div class="table-wrapper-scroll-y my-custom-scrollbar">
-        <table
-          class="table table-striped mb-0"
-          mat-table
-          [dataSource]="dataSource"
-        >
-          <div class="mat-elevation-z8">
-            <!-- RegistrationId Column -->
-            <ng-container matColumnDef="registrationId">
-              <th mat-header-cell *matHeaderCellDef>Registration Id</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.registrationId }}
-              </td>
-            </ng-container>
+        <!-- studentId Column -->
+        <ng-container matColumnDef="author">
+          <th mat-header-cell *matHeaderCellDef>Author</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.Name }}
+          </td>
+        </ng-container>
 
-            <!-- studentId Column -->
-            <ng-container matColumnDef="studentId">
-              <th mat-header-cell *matHeaderCellDef>Student Id</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.studentId }}
-              </td>
-            </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Action</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-button (click)="retrunBook(element)">Return</button>
+          </td>
+        </ng-container>
 
-            <!-- Weight Column -->
-
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef>Book Id</th>
-              <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="date">
-              <th mat-header-cell *matHeaderCellDef>date</th>
-              <td mat-cell *matCellDef="let element">{{ element.date }}</td>
-            </ng-container>
-
-            <!-- status Column -->
-            <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef>
-                <div class="dropdown">
-                  <span>Status </span>
-                  <div class="dropdown-content">
-                    <button mat-button class="active">Active</button>
-                    <button mat-button class="passive">Pasive</button>
-                    <button mat-button class="delayed">Delayed</button>
-                  </div>
-                </div>
-              </th>
-              <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="action">
-              <th mat-header-cell *matHeaderCellDef>Action</th>
-              <td mat-cell *matCellDef="let element">{{ element.action }}</td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-          </div>
-        </table>
-
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </div>
-      
-    
-      <!-- <app-booktable [admin]="true"></app-booktable> -->
-    </div>
+    </table>
+  </div>
+
+  <!-- <app-booktable [admin]="true"></app-booktable> -->
+</div>
