--- a/src/app/admin/books-list/books-list.component.html
+++ b/src/app/admin/books-list/books-list.component.html
@@ -56,7 +56,7 @@
               <img src="{{ displayData.volumeInfo.imageLinks.thumbnail }}" />
             </div>
             <div *ngIf="displayData.volumeInfo.title">
-              <button mat-button class="addButton"  (click)="addBook()">
+              <button mat-button class="addButton" mat-dialog-close (click)="addBook()">
                 Add
               </button>
             </div>
@@ -165,3 +165,5 @@
     (newItemEvent)="deleteFunction($event)"
   ></app-delete-modal>
 </div>
+
+<ng-template #loadingSpinner> <div class="spinner"><mat-spinner></mat-spinner></div> </ng-template>
