--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,12 +1,21 @@
 <mat-form-field class="search">
   <mat-label>Filter</mat-label>
-  <input matInput placeholder="Ex. id" #input />
+  <input matInput placeholder="Ex. ium" #inputItem />
 </mat-form-field>
 <div class="sidePannel2">
-  <div class="table-wrapper-scroll-y my-custom-scrollbar">
+  <div
+    class="table-wrapper-scroll-y my-custom-scrollbar"
+    *ngIf="loading | async else loadingSpinner"
+  >
     <table class="table table-striped mb-0" mat-table [dataSource]="dataSource">
       <div class="mat-elevation-z8">
         <!-- RegistrationId Column -->
+        <ng-container matColumnDef="bookId">
+          <th mat-header-cell *matHeaderCellDef>Book Id</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.customIdName }}
+          </td>
+        </ng-container>
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef>Book title</th>
           <td mat-cell *matCellDef="let element">
@@ -20,6 +29,25 @@
           <td mat-cell *matCellDef="let element">
             {{ element.Name }}
           </td>
+        </ng-container>
+
+        <ng-container matColumnDef="startDate" >
+          <th mat-header-cell *matHeaderCellDef>Start Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ consvertStartDate(element.startDate) | date }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="endDate">
+          <th mat-header-cell *matHeaderCellDef>End Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ consvertStartDate(element.endDate) | date }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="reservedBy" >
+          <th mat-header-cell *matHeaderCellDef>Student</th>
+          <td mat-cell *matCellDef="let element">{{ element.student }}</td>
         </ng-container>
 
         <ng-container matColumnDef="action">
@@ -37,3 +65,8 @@
 
   <!-- <app-booktable [admin]="true"></app-booktable> -->
 </div>
+<ng-template #loadingSpinner> <div class="spinner"><mat-spinner></mat-spinner></div> </ng-template>
+<ng-template #dialogue>
+  <button mat-button mat-dialog-close style="color:green" ></button>
+  <button mat-dialog-close mat-button style="color:red" ></button>
+</ng-template>
