--- a/src/app/student/reserve/reserve.component.scss
+++ b/src/app/student/reserve/reserve.component.scss
@@ -1,6 +1,6 @@
-.background{
-    position: relative;
-}
-.scss{
-    background-color:rgb(243, 243, 243);
-}
+// .background{
+//     position: relative;
+// }
+// .scss{
+//     background-color:rgb(243, 243, 243);
+// }
