--- a/admin/dashboard/dashboard.component.html
+++ b/admin/dashboard/dashboard.component.html
@@ -1,76 +1,86 @@
+<mat-form-field class="search">
+  <mat-label>Filter</mat-label>
+  <form [formGroup]="form">
+    <input
+      matInput
+      placeholder="Ex. ium"
+      #inputItem
+      formControlName="search"
+      (input)="searchArray(this.form.value.search, this.dataSource)"
+    />
+  </form>
+</mat-form-field>
+<div class="sidePannel2">
+  <div
+    class="table-wrapper-scroll-y my-custom-scrollbar"
+    *ngIf="loading | async; else loadingSpinner"
+  >
+    <table class="table table-striped mb-0" mat-table [dataSource]="dataSource">
+      <div class="mat-elevation-z8">
+        <!-- RegistrationId Column -->
+        <ng-container matColumnDef="bookId">
+          <th mat-header-cell *matHeaderCellDef style="width: 230px">
+            Book Id
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.customIdName }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef style="width: 230px">
+            Book title
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.BookName }}
+          </td>
+        </ng-container>
 
-    <mat-form-field class="search">
-      <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ex. id"
-        #input
-      />
-    </mat-form-field>
-    <div class="sidePannel2">
-      <div class="table-wrapper-scroll-y my-custom-scrollbar">
-        <table
-          class="table table-striped mb-0"
-          mat-table
-          [dataSource]="dataSource"
-        >
-          <div class="mat-elevation-z8">
-            <!-- RegistrationId Column -->
-            <ng-container matColumnDef="registrationId">
-              <th mat-header-cell *matHeaderCellDef>Registration Id</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.registrationId }}
-              </td>
-            </ng-container>
+        <!-- studentId Column -->
+        <ng-container matColumnDef="author">
+          <th mat-header-cell *matHeaderCellDef style="width: 195px">Author</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.Name }}
+          </td>
+        </ng-container>
 
-            <!-- studentId Column -->
-            <ng-container matColumnDef="studentId">
-              <th mat-header-cell *matHeaderCellDef>Student Id</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.studentId }}
-              </td>
-            </ng-container>
+        <ng-container matColumnDef="startDate">
+          <th mat-header-cell *matHeaderCellDef>Start Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ consvertStartDate(element.startDate) | date }}
+          </td>
+        </ng-container>
 
-            <!-- Weight Column -->
+        <ng-container matColumnDef="endDate">
+          <th mat-header-cell *matHeaderCellDef>End Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ consvertStartDate(element.endDate) | date }}
+          </td>
+        </ng-container>
 
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef>Book Id</th>
-              <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-            </ng-container>
+        <ng-container matColumnDef="reservedBy">
+          <th mat-header-cell *matHeaderCellDef>Student</th>
+          <td mat-cell *matCellDef="let element">{{ element.student }}</td>
+        </ng-container>
 
-            <ng-container matColumnDef="date">
-              <th mat-header-cell *matHeaderCellDef>date</th>
-              <td mat-cell *matCellDef="let element">{{ element.date }}</td>
-            </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Action</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-button (click)="retrunBook(element)">Return</button>
+          </td>
+        </ng-container>
 
-            <!-- status Column -->
-            <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef>
-                <div class="dropdown">
-                  <span>Status </span>
-                  <div class="dropdown-content">
-                    <button mat-button class="active">Active</button>
-                    <button mat-button class="passive">Pasive</button>
-                    <button mat-button class="delayed">Delayed</button>
-                  </div>
-                </div>
-              </th>
-              <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="action">
-              <th mat-header-cell *matHeaderCellDef>Action</th>
-              <td mat-cell *matCellDef="let element">{{ element.action }}</td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-          </div>
-        </table>
-
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </div>
-      
-    
-      <!-- <app-booktable [admin]="true"></app-booktable> -->
-    </div>
+    </table>
+  </div>
+
+  <!-- <app-booktable [admin]="true"></app-booktable> -->
+</div>
+<ng-template #loadingSpinner>
+  <div class="spinner"><mat-spinner></mat-spinner></div>
+</ng-template>
+<ng-template #dialogue>
+  <button mat-button mat-dialog-close style="color: green"></button>
+  <button mat-dialog-close mat-button style="color: red"></button>
+</ng-template>
