--- a/admin/students-list/students-list.component.html
+++ b/admin/students-list/students-list.component.html
@@ -1,159 +1,157 @@
-  <div class="mb-2 d-flex justify-content-between align-items-center">
-    <div class="position-relative">
-      <span class="position-absolute search"><i class="search"></i> </span>
-      <button>
-        <form [formGroup]="form">
-          <input
-            type="search"
-            required
-            class="form-control w-100"
-            placeholder="Search..."
-            (input)="filter()"
-          />
-        </form>
-      </button>
-    </div>
-    <button
-      mat-button
-      color="primary"
-      (click)="openDialogWithTemplateRef(myDialog)"
-    >
-      Add A New Student!
+<div class="mb-2 d-flex justify-content-between align-items-center">
+  <div class="position-relative">
+    <span class="position-absolute search"><i class="search"></i> </span>
+    <button>
+      <form [formGroup]="form">
+        <input
+          type="search"
+          required
+          class="form-control w-100"
+          placeholder="Search..."
+        />
+      </form>
     </button>
   </div>
+  <button
+    mat-button
+    color="primary"
+    (click)="openDialogWithTemplateRef(myDialog)"
+  >
+    Add A New Student!
+  </button>
+</div>
 
-  <ng-template #myDialog>
-    <mat-dialog-content>
-      <div class="col-md-6">
-        <div class="container mt-2 px-6">
-          <h1
-            class="mb-5 d-flex justify-content-between align-items-center"
-            style="color: green"
-          >
-            Add A New Student!
-          </h1>
-          <div class="mb-2 d-flex justify-content-between align-items-center">
-            <div class="position-relative">
-              <form [formGroup]="form" class="was-validated">
-                <div class="mb-2">
-                  <h3>Student Id</h3>
-                  <input
-                    type="text"
-                    class="form-control valid"
-                    id="id"
-                    formControlName="id"
-                    placeholder="Id"
-                    required
-                    minlength="5"
-                  />
-                </div>
+<ng-template #myDialog>
+  <mat-dialog-content>
+    <div class="col-md-6">
+      <div class="container mt-2 px-6">
+        <h1
+          class="mb-5 d-flex justify-content-between align-items-center"
+          style="color: green"
+        >
+          Add A New Student!
+        </h1>
+        <div class="mb-2 d-flex justify-content-between align-items-center">
+          <div class="position-relative">
+            <form [formGroup]="form" class="was-validated">
+              <div class="mb-2">
+                <h3>Student Id</h3>
+                <input
+                  type="text"
+                  class="form-control valid"
+                  id="id"
+                  formControlName="id"
+                  placeholder="Id"
+                  required
+                  minlength="5"
+                />
+              </div>
 
-                <div class="mb-3">
-                  <h3>Username</h3>
-                  <input
-                    type="text"
-                    class="form-control valid"
-                    id="username"
-                    formControlName="username"
-                    placeholder="Username"
-                    required
-                    minlength="3"
-                  />
-                </div>
-                <div class="mb-3">
-                  <h3>Password</h3>
-                  <input
-                    type="text"
-                    class="form-control valid"
-                    id="password"
-                    formControlName="password"
-                    placeholder="Password"
-                    required
-                    ngModel
-                    minlength="3"
-                  />
-                </div>
+              <div class="mb-3">
+                <h3>Username</h3>
+                <input
+                  type="text"
+                  class="form-control valid"
+                  id="username"
+                  formControlName="username"
+                  placeholder="Username"
+                  required
+                  minlength="3"
+                />
+              </div>
+              <div class="mb-3">
+                <h3>Password</h3>
+                <input
+                  type="text"
+                  class="form-control valid"
+                  id="password"
+                  formControlName="password"
+                  placeholder="Password"
+                  required
+                  ngModel
+                  minlength="3"
+                />
+              </div>
 
-                <div *ngIf="!form.valid" class="error">
-                  <p>Please complete the required placeholders!</p>
-                </div>
-                <hr />
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  href="#"
-                  routerLinkActive="active"
-                  [disabled]="!form.valid"
-                  (click)="goToAdd()"
-                >
-                  Generate a new student !
-                </button>
-              </form>
-            </div>
+              <div *ngIf="!form.valid" class="error">
+                <p>Please complete the required placeholders!</p>
+              </div>
+              <hr />
+              <button
+                type="button"
+                class="btn btn-primary"
+                href="#"
+                routerLinkActive="active"
+                [disabled]="!form.valid"
+                mat-dialog-close
+                (click)="goToAdd()"
+              >
+                Generate a new student !
+              </button>
+            </form>
           </div>
         </div>
       </div>
-      <div class="mb-5 d-flex justify-content-between align-items-center"></div>
-    </mat-dialog-content>
-  </ng-template>
-
-  <div class="scss">
-    <div class="table-wrapper-scroll-y my-custom-scrollbar">
-      <table class="table table-bordered table-striped mb-0">
-        <thead>
-          <tr class="bg-light">
-            <th scope="col" width="21.1%">Student Id</th>
-            <th scope="col" width="21.1%">Username</th>
-            <th scope="col" width="21.1%">Password</th>
-            <th scope="col" width="21.1%"><span>Edit</span></th>
-          </tr>
-        </thead>
-        <tbody *ngFor="let item of data">
-          <ng-template #myDialog1 class="dialogue"
-            ><div>
-              <h1>Are you sure you want to delete this user?</h1>
-              <div class="buttons">
-                <button
-                  class="yes"
-                  mat-button
-                  (click)="deleteFunction(item)"
-                  mat-dialog-close
-                >
-                  Yes
-                </button>
-              </div>
-            </div></ng-template
-          >
-          <tr>
-            <td>{{ item.id }}</td>
-            <td>{{ item.username }}</td>
-            <td>{{ item.password }}</td>
-
-            <td class=" ">
-              <!-- <button mat-raised-button type="button" class="btn btn-light">
-                  <mat-slide-toggle> </mat-slide-toggle>
-                </button> -->
-              <button
-                mat-raised-button
-                type="button"
-                class="btn btn-primary mr-1"
-                (click)="openDialogWithTemplateRef(myDialog, true)"
-              >
-                EDIT
-              </button>
-              <button
-                mat-raised-button
-                (click)="openDialogWithTemplateRef(myDialog1)"
-                type="button"
-                class="btn btn-danger"
-              >
-                DELETE
-              </button>
-            </td>
-          </tr>
-
-          <thead></thead>
-        </tbody>
-      </table>
     </div>
+    <div class="mb-5 d-flex justify-content-between align-items-center"></div>
+  </mat-dialog-content>
+</ng-template>
+
+<div class="scss">
+  <div class="table-wrapper-scroll-y my-custom-scrollbar">
+    <table class="table table-bordered table-striped mb-0">
+      <thead>
+        <tr class="bg-light">
+          <th scope="col" width="21.1%">Student Id</th>
+          <th scope="col" width="21.1%">Username</th>
+          <th scope="col" width="21.1%">Password</th>
+          <th scope="col" width="21.1%"><span>Edit</span></th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let item of data">
+        <ng-template #myDialog1 class="dialogue"
+          ><div>
+            <h1>Are you sure you want to delete this user?</h1>
+            <div class="buttons">
+              <button
+                class="yes"
+                mat-button
+                (click)="deleteFunction(item)"
+                mat-dialog-close
+              >
+                Yes
+              </button>
+              <button class="no" mat-button mat-dialog-close>No</button>
+            </div>
+          </div></ng-template
+        >
+        <tr>
+          <td>{{ item.id }}</td>
+          <td>{{ item.username }}</td>
+          <td>{{ item.password }}</td>
+
+          <td class=" ">
+            <button
+              mat-raised-button
+              type="button"
+              class="btn btn-primary mr-1"
+              (click)="openDialogWithTemplateRef(myDialog, true)"
+            >
+              EDIT
+            </button>
+            <button
+              mat-raised-button
+              (click)="openDialogWithTemplateRef(myDialog1)"
+              type="button"
+              class="btn btn-danger"
+            >
+              DELETE
+            </button>
+          </td>
+        </tr>
+
+        <thead></thead>
+      </tbody>
+    </table>
   </div>
+</div>
