--- a/homepage/homepage.component.html
+++ b/homepage/homepage.component.html
@@ -41,17 +41,17 @@
     <a href="#" class="w3-bar-item w3-button">SEARCH</a>
   </div>
 </div>
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-  <div class="w3-display-middle" style="white-space: nowrap">
-    <span
-      class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity"
+<div class="bgimg-1 w3-display-container w3-opacity-min  " id="home">
+  <div class="w3-display-middle " style="white-space: nowrap">
+    <div
+      class="w3-center w3-padding-large w3-black w3-xlarge w3-wide animate__fadeInUp"
       >IKUBINFO <span class="w3-hide-small">BOOKS</span> STORE
-    </span>
+    </div>
   </div>
 </div>
-<div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">ABOUT BOOKS</h3>
-  <p class="w3-center"><em>Different Genres of Books</em></p>
+<div class="w3-content w3-container w3-padding-64 " id="about">
+  <h3 class="w3-center animate__backInLeft">ABOUT BOOKS</h3>
+  <p class="w3-center animate__backInRight "><em>Different Genres of Books</em></p>
   <p>
     There are different genres of books available for book readers. Every day,
     thousands of books are released in the market ranging from travel books to
@@ -110,7 +110,7 @@
         (click)="openIt()"
         class="w3-bar-item w3-button w3-hide-small w3-right w3-hover"
       >
-        <div class="container" style="padding: 8px 98px;">
+        <div class="container" style="padding: 8px 98px">
           <h1>Search Every BooK!</h1>
         </div>
       </div>
@@ -265,9 +265,13 @@
           disabled
         />
 
-        <button class="w3-button w3-black w3-right w3-section" type="submit"  (click)="openGmail()">
+        <button
+          class="w3-button w3-black w3-right w3-section"
+          type="submit"
+          (click)="openGmail()"
+        >
           <i class="fa fa-paper-plane"></i>
-            SEND EMAIL
+          SEND EMAIL
         </button>
         <br />
         <li style="color: red">
@@ -298,7 +302,6 @@
     </div>
   </div>
 </div>
-
 
 <footer
   class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off"
