--- a/homepage/homepage.component.scss
+++ b/homepage/homepage.component.scss
@@ -36,3 +36,17 @@ html {
   height: 400px !important;
 }
 
+.animate__backInLeft{
+
+  animation-duration: 2s; 
+}
+.animate__backInRight{
+
+  animation-duration: 2s; 
+}
+.animate__fadeInTopLeft{
+  animation-duration: 2s; 
+}
+.animate__fadeInUp{
+  animation-duration: 2s; 
+}
