--- a/student/student.component.html
+++ b/student/student.component.html
@@ -76,13 +76,15 @@
         </div>
         <div
           class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small"
-        >
+         style="height: 4.5cm">
           <p><strong>List of Books!!</strong></p>
+          <hr>
           <div class="table-wrapper-scroll-y my-custom-scrollbar">
-            <button (click)="this.router.navigate(['student/book-list'])">
+            <button class="buttons" mat-button (click)="this.router.navigate(['student/book-list'])">
               go to booklist
             </button>
-            <button (click)="this.router.navigate(['student/history'])">
+            <br>
+            <button class="buttons" mat-button (click)="this.router.navigate(['student/history'])">
               go to history
             </button>
           </div>
