--- a/src/app/booktable/booktable.component.scss
+++ b/src/app/booktable/booktable.component.scss
@@ -34,3 +34,9 @@
         height: 280px;
         width: 170px;
     }
+
+    .spinner{
+        display: flex;
+        justify-content: center;
+        margin-top: 100px;
+    }
