--- a/booktable/booktable.component.html
+++ b/booktable/booktable.component.html
@@ -3,18 +3,20 @@
   *ngIf="loading | async; else loadingSpinner"
 >
   <h1 style="color: rgb(214, 168, 108)">Books List</h1>
-  <div *ngIf="this.user.role === 'admin'">
-    <button mat-button style="color: green" (click)="getFree()">free</button
-    ><button mat-button style="color: orange" (click)="getReserved()">
-      reserved</button
-    ><button mat-button style="color: red" (click)="getOverdue();">
-      overdue
-    </button>
+  <div *ngIf="this.user">
+    <div *ngIf="this.user.role === 'admin'">
+      <button mat-button style="color: green" (click)="getFree()">Free</button
+      ><button mat-button style="color: orange" (click)="getReserved()">
+        Reserved</button
+      ><button mat-button style="color: red" (click)="getOverdue()">
+        Overdue
+      </button>
+    </div>
   </div>
   <hr />
   <div class="table-wrapper-scroll-y my-custom-scrollbar">
     <table class="table table-bordered table-striped mb-0">
-      <div class="imageContainer">
+      <div class="imageContainer" *ngIf="allData.length">
         <div *ngFor="let item of allData">
           <div *ngIf="item.status === 'reserved'">
             <mat-card class="{{ inactiveClass }}" (click)="openDialog(item)">
